# graphiite

./: .clangd  .gitmodules  CMakeLists.txt  README.md  build.sh  compile_spv.sh
.zed/: debug.json
assets/: credits.toml
assets/shaders/: basic.vert.spv  sdf_rect_stroke.frag  sdf_rect_stroke.frag.spv  text.frag  text.frag.spv  text.vert.spv
include/: base_components.hpp  clay_extension.hpp  clay_manager.hpp  components.hpp  file_dialog.hpp  font.hpp  gradient.hpp  image.hpp  image_io.hpp  image_loader.hpp  input_manager.hpp  photo.hpp  renderer.hpp  texture.hpp  theme.hpp  timing.hpp
include/ui/: theme.hpp
include/ui/components/: bottom_bar.hpp  button.hpp  photo_grid.hpp  photo_item.hpp  placeholder.hpp  slider.hpp  tally.hpp
src/: base_components.cpp  clay_manager.cpp  clay_renderer.cpp  components.cpp  file_dialog.cpp  font.cpp  image.cpp  image_io.cpp  image_loader.cpp  input_manager.cpp  renderer.cpp  sprite_renderer.cpp  xyz.hpp
src/color/: xyz.hpp
src/shaders/: arc.frag  arc.frag.spv  color_rect.frag  color_rect.frag.spv  sdf_rect.frag  sdf_rect.frag.spv  sprite.frag  sprite.frag.spv  text.frag  text.frag.spv  texture_rect.frag  texture_rect.frag.spv
tests/: CMakeLists.txt  image_io_tests.cpp  image_loader_tests.cpp
